@@ -62,6 +62,8 @@ demo.py</tt>'.
 <li> Added support for the Macintosh.
 <li> Separated the platform-dependent code into separate modules:
      <tt>gp.py</tt>, <tt>gp_mac.py</tt>, and <tt>gp_win32.py</tt>.
+<li> Allow access to all of the postscript printer driver options
+     through the <tt>hardcopy()</tt> command.
 <li> Fixed an import problem in <tt>test.py</tt>.
 </ul>
 
@@ -184,6 +186,6 @@ Written by <a href="http://monsoon.harvard.edu/~mhagger/">Michael
 Haggerty</a> (email <a href="mailto:mhagger@blizzard.harvard.edu">
 &lt;<i>mhagger@blizzard.harvard.edu</i>&gt;</a>)<br>
 <!-- hhmts start -->
-Last modified: Sat Oct  9 17:19:49 1999
+Last modified: Wed Oct 13 23:07:18 1999
 <!-- hhmts end -->
 </body> </html>
